# rag

./: .gitignore  Makefile  README.md  cli.py  indexing.py  pyproject.toml
data/Output_SingleQuery/: single_query.json
data/datasets/AnsweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/datasets/UnansweredQuestions/: dataset_docs_public.json
data/output/: search.json  single_query  single_query.json
data/output/search_results/: dataset_docs_public.json
data/output/search_results_and_answer/: dataset_docs_public.json
src/: __main__.py  cli.py  data_models.py  generator.py  lexical_retrieval.py  main.py  qwen3_06B.py  retrieval.py  retrieving_idx.py
