[project]
name = "rag"
version = "0.1.0"
description = "RAG against the machine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.8",
    "fire>=0.7.1",
    "huggingface-hub>=1.13.0",
    "pydantic>=2.13.3",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
