[project]
name = "rag"
version = "0.1.0"
description = "RAG against the machine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "bm25s>=0.3.8",
    "chromadb>=1.5.8",
    "colorama>=0.4.6",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "huggingface-hub>=1.13.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.3",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
]
